--- a/src/Styles/aboutPage.css
+++ b/src/Styles/aboutPage.css
@@ -30,13 +30,13 @@
     }
 }
 
-.pageInner1 {
+/* .pageInner1 {
     display: flex;
     justify-content: center;
     width: 100vw;
     overflow-x: hidden;
     overflow-y: scroll;
-}
+} */
 
 @media (max-height: 960px) {
     .pageInner1 {
