--- a/src/Styles/main.css
+++ b/src/Styles/main.css
@@ -23,7 +23,7 @@ a {
     text-decoration: none;
 }
 
-.waSans {
+.wrap {
     width: 100vw;
     height: 100vh;
     overflow: hidden;
@@ -52,3 +52,40 @@ a {
     -khtml-user-select: none;
     user-select:none;
 }
+
+.fade-in {
+    opacity: 1;
+    transition: opacity 0.5s ease-in;
+  }
+  
+  .fade-out {
+    opacity: 0;
+    transition: opacity 0.5s ease-out;
+  }
+  
+
+
+.slide-fade-enter-from {
+    transform: translateY(10px);
+    opacity: 0;
+  }
+  
+  .slide-fade-enter-to {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+  
+    .slide-fade-leave-from {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+  
+  .slide-fade-leave-to {
+    transform: translateY(-10px);
+    opacity: 0;
+  }
+  
+  .slide-fade-enter-active,
+  .slide-fade-leave-active {
+    transition: all 0.5s;
+  }
